# Stormwater-Management-Model

./: .clang-format  .gitignore  .gitmodules  .project  .travis.yml  AUTHORS  Build.md  CITATION.cff  CMakeLists.txt  CONTRIBUTORS  LICENSE  LICENSE.txt  README.md  Readme.txt  ReleaseNotes.md  ReleaseNotes.txt  appveyor.yml  circle.yml  make.bat  vc_build2013.bat
docs/: AUTHORS.dox  CMakeLists.txt  Doxyfile  How-to-use-the-toolkit.dox  LICENSE.dox  Latest.md  Mainpage.md  SWMM_5.2.0.md  Toolkit-Overview.dox  extrastylesheet.css  main.dox  modules_networkinfo.dox  modules_simulationsettings.dox  modules_toolkit.dox  newfooter.html  updates-520.md
docs/api-guide/: api-guide.md  appendix_a.md  appendix_b.md  appendix_c.md  controls_sub.txt  mainpage.md
docs/custom/html/: header.html
src/: CMakeLists.txt  climate.c  consts.h  controls.c  culvert.c  datetime.c  datetime.h  dwflow.c  dynwave.c  enums.h  error.c  error.h  error.txt  exfil.c  exfil.h  findroot.c  findroot.h  flowrout.c  forcmain.c  funcs.h  gage.c  globals.h  gwater.c  hash.c  hash.h  headers.h  hotstart.c  iface.c  infil.c  infil.h  inflow.c  inlet.c  inlet.h  input.c  inputAPI.c  inputAPI.h  inputrpt.c  keywords.c  keywords.h  kinwave.c  (+40 more)
src/include/: swmm5.h  toolkitAPI.h
src/outfile/: CMakeLists.txt  errormanager.c  errormanager.h  messages.h  swmm_output.c
src/outfile/include/: swmm_output.h  swmm_output_enums.h  swmm_output_export.h
src/run/: CMakeLists.txt  main.c  timer.c  timer.h
src/shared/: CMakeLists.txt  csio_helper.c  csio_helper.h  cstr_helper.c  cstr_helper.h
src/solver/: CMakeLists.txt  Roadmap.txt  altfuncs.c  climate.c  consts.h  controls.c  culvert.c  datetime.c  datetime.h  dwflow.c  dynwave.c  enums.h  error.c  error.h  error.txt  exfil.c  exfil.h  findroot.h  flowrout.c  forcmain.c  funcs.h  gage.c  globals.h  gwater.c  hash.c  hash.h  headers.h  hotstart.c  iface.c  infil.c  infil.h  inflow.c  inlet.c  inlet.h  input.c  inputrpt.c  keywords.c  keywords.h  kinwave.c  landuse.c  (+43 more)
src/solver/bindings/: swmm5.def
src/solver/include/: swmm5.h  toolkit.h  toolkitAPI.h  toolkitAPI_enums.h  toolkit_enums.h  toolkit_error.h  toolkit_errors.txt  toolkit_structs.h
tests/: CMakeLists.txt  README.md  Unit_Testing.md  helper.h  test_lid_toolkitapi.cpp  test_output.cpp  test_swmm.cpp  test_toolkitapi.cpp  test_toolkitapi.hpp  test_toolkitapi_gage.cpp  test_toolkitapi_lid.cpp  test_toolkitapi_lid.hpp  test_toolkitapi_lid_results.cpp  test_toolkitapi_pollut.cpp
tests/data/: swmm_api_test.inp  swmm_api_test_metric.inp  swmm_api_test_metric_dw.inp
tests/data/lid/: w_wo_BC_2Subcatchments.inp  w_wo_IT_2Subcatchments.inp  w_wo_RB_2Subcatchments.inp  w_wo_RD_2Subcatchments.inp  w_wo_RG_2Subcatchments.inp  w_wo_SWALE_2Subcatchments.inp
tests/data/lid/revised/: w_wo_BC_2Subcatchments_revised.inp  w_wo_IT_2Subcatchments_revised.inp  w_wo_RD_2Subcatchments_revised.inp  w_wo_RG_2Subcatchments_revised.inp
tests/outfile/: CMakeLists.txt  test_output.cpp
tests/shared/: CMakeLists.txt  test_cstrhelper.cpp  test_errormanager.cpp  test_filemanager.cpp
tests/solver/: CMakeLists.txt  test_canonical.cpp  test_gage.cpp  test_inlets_and_drains.cpp  test_lid.cpp  test_lid.hpp  test_lid_results.cpp  test_pollut.cpp  test_pollutants.cpp  test_pollutants.hpp  test_solver.cpp  test_solver.hpp  test_solver_api.cpp  test_solver_errors.cpp  test_solver_hotstart.cpp  test_solver_shapes.cpp  test_stats.cpp  test_toolkit.cpp  test_toolkit.hpp  test_toolkit_hotstart.cpp
tests/solver/data/: feng.txt  feng_r.txt  link_constantinflow.inp  link_flow_dir.inp  site_drainage_model.inp  swmm_api_test.inp  swmm_api_test.out  swmm_api_test.rpt  test_ex1_metric.inp  test_ex1_metric_dynwave.inp  test_example1.inp  test_inlet_drains.inp
tests/solver/data/hotstart/: Simulation1.inp  Simulation1_use_hot_start.inp  Simulation2.inp  Simulation3.inp  site_drainage_model.inp  site_drainage_model_save_hotstart.inp  site_drainage_model_use_hotstart_v1.inp  site_drainage_model_use_hotstart_v2.inp  site_drainage_model_use_hotstart_v3.inp  use_hot_start_test.hsf
tests/solver/data/lid/: test_w_wo_GR_2Subcatchments.inp  test_w_wo_PP_2Subcatchments.inp  test_w_wo_RB_2Subcatchments.inp  test_w_wo_SWALE_2Subcatchments.inp  test_wq_w_wo_RG_2Subcatchments.inp  w_wo_BC_2Subcatchments.out  w_wo_BC_2Subcatchments.rpt  w_wo_GR_2Subcatchments.rpt  w_wo_IT_2Subcatchments.out  w_wo_IT_2Subcatchments.rpt  w_wo_PP_2Subcatchments.out  w_wo_PP_2Subcatchments.rpt  w_wo_RB_2Subcatchments.rpt  w_wo_RD_2Subcatchments.rpt  w_wo_RG_2Subcatchments.out  w_wo_RG_2Subcatchments.rpt  w_wo_SWALE_2Subcatchments.out  w_wo_SWALE_2Subcatchments.rpt
tests/solver/data/pollutants/: link_constantinflow.inp  node_constantinflow_constanteffluent.inp
tests/swmm-nrtestsuite/apps/: swmm-5110.json  swmm-5111_x64.json  swmm-5111_x86.json  swmm-5112.json  swmm-517_x86.json  swmm-518.json  swmm-519.json
tests/swmm-nrtestsuite/benchmark/swmm-5112/: manifest.json
tests/swmm-nrtestsuite/tests/examples/: Example1.inp  Example1.txt  Example2.inp  Example2.txt  Example3.inp  Example3.txt  Example4.inp  Example4.txt  Example5.inp  Example5.txt  Example6.inp  Example6.txt  example1.json  example2.json  example3.json  example4.json  example5.json  example6.json
tests/swmm-nrtestsuite/tests/extran/: extran1.inp  extran1.json  extran10.inp  extran10.json  extran2.inp  extran2.json  extran3.inp  extran3.json  extran4.inp  extran4.json  extran5.inp  extran5.json  extran6.inp  extran6.json  extran7.inp  extran7.json  extran8a.inp  extran8a.json  extran8b.hsf  extran8b.inp  extran8b.json  extran9.inp  extran9.json
tools/swmm-output/: CMakeLists.txt  setup.py
tools/swmm-output/include/: swmm_output.h  swmm_output_export.h
tools/swmm-output/src/: errormanager.h  messages.h  numpy.i  outputapi.c  outputapi.cpp  outputapi.h  outputapi.i  swmm_output.c  swmm_output.h  swmm_output.i  swmm_output_export.h
tools/swmm-output/test/: main.c  outputapi_unittest.cpp  swmm_output_test.py  test_swmm_output.cpp
tools/swmm-output/test/data/: __init__.py
tools/swmm-output/tests/: test_output.py
(+180 files in other folders)
